Fixed prefix and input misalignment and line break in prefix (#1725)

--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -196,6 +196,7 @@
   .neeto-ui-input__prefix,
   .neeto-ui-input__suffix {
     display: flex;
+    white-space: nowrap !important;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
